# sloppylint

./: README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  publish.yml
src/sloppy/: __init__.py  cli.py  config.py  detector.py  reporter.py
src/sloppy/analyzers/: dead_code.py  duplicates.py  import_validator.py  unused_imports.py
src/sloppy/patterns/: hallucinations.py  noise.py  structure.py  style.py
tests/corpus/: test_corpus.py
tests/corpus/false_positives/: abstract_methods.py  cli_with_print.py  local_imports.py  multiline_strings.py  valid_python_methods.py
tests/corpus/true_positives/: hallucinated_imports.py
tests/test_analyzers/: test_dead_code.py  test_duplicates.py
tests/test_patterns/: test_hallucinations.py  test_structure.py
