[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sloppylint"
version = "0.2.0"
description = "Python AI Slop Detector - Find over-engineering, hallucinations, and dead code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Rob Fox" }
]
keywords = ["linter", "code-quality", "ai", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
rich = [
    "rich>=13.0",
]
toml = [
    "tomli>=2.0; python_version < '3.11'",
]
all = [
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
sloppylint = "sloppy.cli:main"

[project.urls]
Homepage = "https://github.com/rsionnach/sloppylint"
Repository = "https://github.com/rsionnach/sloppylint"

[tool.hatch.build.targets.wheel]
packages = ["src/sloppy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.sloppy]
exclude = ["tests/*", "migrations/*"]
severity_threshold = "medium"
